# clipflow

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/clipflow/: __init__.py  cli.py  config.py  project.py
src/clipflow/pipeline/: base.py  tutorial.py  ugc.py
src/clipflow/stages/: analyze.py  compose.py  copywriting.py  cover.py  cut.py  editorial.py  export.py  plan.py  render.py  transcribe.py
src/clipflow/stages_v2/: assemble.py  assets.py  script.py  style.py  variants.py
src/clipflow/utils/: ffmpeg.py  llm.py  subtitle_burn.py  whisper_router.py
